src/objects/Loaded_Daily_Rate_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It contains constants for needed for calculate total cost of time cards</description>
    <label>Loaded Daily Rate Settings</label>
    <fields>
        <fullName>Fee__c</fullName>
        <label>% Fee</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fringe__c</fullName>
        <label>Fringe</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>G_A__c</fullName>
        <label>G&amp;A</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Overhead__c</fullName>
        <label>Overhead</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Settings_Effective_Date__c</fullName>
        <description>From that date this settings will be used to calculate cost of time card</description>
        <label>Settings Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Working_Days__c</fullName>
        <label>Working Days</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>